<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <group
        android:id="@+id/sorting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_popular"
            android:checked="true"
            android:title="@string/popular" />

        <item
            android:id="@+id/action_az"
            android:checked="false"
            android:title="@string/az" />

        <item
            android:id="@+id/action_za"
            android:checked="false"
            android:title="@string/za" />
    </group>
</menu>